name: ChasingBottoms
version: 1.0.0
license: OtherLicense
license-file: LICENCE
copyright: Copyright (c) Nils Anders Danielsson 2004, 2005.
author: Nils Anders Danielsson
maintainer: http://www.cs.chalmers.se/~nad/contact.html
stability: experimental
homepage: http://www.cs.chalmers.se/~nad/software/#Chasing Bottoms
package-url: http://www.cs.chalmers.se/~nad/software/ChasingBottoms/ChasingBottoms.tgz
synopsis: For testing partial and infinite values.
description: Do you ever feel the need to test code involving bottoms
  (e.g. calls to the error function), or code involving infinite values?
  Then this library could be useful for you.
category: Test
tested-with: GHC==6.2.2, GHC==6.4
build-depends: base==1.0, QuickCheck==1.0
exposed-modules: Test.ChasingBottoms, Test.ChasingBottoms.Approx,
  Test.ChasingBottoms.ApproxShow, Test.ChasingBottoms.IsBottom,
  Test.ChasingBottoms.Nat, Test.ChasingBottoms.SemanticOrd,
  Test.ChasingBottoms.TimeOut
other-modules: Test.ChasingBottoms.IsType
-- It would be nice if the tests that can be accessed through
-- Test.ChasingBottoms.Tests.main could be run automatically using
-- Cabal. See make test.
ghc-options: -O2
